--- a/app/css/newfoundland.css
+++ b/app/css/newfoundland.css
@@ -16,28 +16,26 @@ html, body, .vsc-initialized {
 
 .sky-container .main-content {
   position: relative;
-  left: calc(50% - 49%/2);
-  top: calc(50% - 84%/2.5);
-  width: 49%;
-  height: 84%;
+  left: calc(50% - 85%/2);
+  top: calc(50% - 94%/2.5);
+  width: 85%;
+  height: 94%;
   background: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   border-radius: 0.5em;
-  /*
-  border-top: .2em solid #d4d4d4;
-  border-bottom: .2em solid #d4d4d4;
-  border-left: .2em solid #d4d4d4;
-  border-right: .2em solid #d4d4d4
-  */
+}
+
+.sky-cotainer .main-content .extra-break {
+  display: inline;
 }
 
 .sky-container .main-content .text-container {
   color: #d4d4d4;
   font-family: "Roboto Mono", monospace;
-  font-size: 1.15em;
+  font-size: 0.95em;
   text-align: center;
   z-index: 1;
   height: 100%;
@@ -49,20 +47,13 @@ html, body, .vsc-initialized {
   height: 65%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
 .sky-container .main-content .text-container .description-container div {
   text-align: center;
   width: 100%;
-}
-
-.sky-container .main-content .text-container hr {
-  align-content: center;
-  width: 65%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .sky-container .main-content .text-container .description-container div hr {
@@ -73,142 +64,47 @@ html, body, .vsc-initialized {
 }
 
 .sky-container .main-content .text-container .link-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
   height: calc(35% - 4px);
 }
 
-/*
-.sky-container .main-content .text-container .link-container::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: calc(100% + 6px);
-  height: 0.15em;
-  border: 2px solid black;
-  bottom: -.2em;
-  left: -4px;
-  background-color: #289ddb;
-  transform: scaleX(0);
-  transition: transform 0.3s ease-out;
+.sky-container .main-content .text-container .link-container hr {
+  align-content: center;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.sky-container .main-content .text-container .link-container:hover::before {
-  transform: scaleX(1);
+.sky-container .main-content .text-container .link-container div {
+  width: 100%;
 }
-*/
+
 .sky-container .main-content .text-container .link-container a {
+  font-size: 0.9em;
   color: #d4d4d4;
   text-decoration: none;
   display: inline-block;
+}
+
+.sky-container .main-content .text-container .link-container .link-sep-non-mobile {
+  display: none;
+}
+
+.sky-container .main-content .text-container .link-container span .link-sep {
+  align-content: center;
+  width: 45%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .sky-container .main-content .text-container .link-container a:hover {
   text-decoration: underline;
 }
 
-/*
-.sky-container .main-content .text-container .link-container a::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: calc(50% + 6px);
-  height: 0.15em;
-  border: 2px solid black;
-  bottom: -2px;
-  left: calc(25% - 4px);
-  background-color: #000000;
-  transform: scaleX(0);
-  transition: transform 0.35s ease-out;
-}
-
-.sky-container .main-content .text-container .link-container a:hover::before {
-  transform: scaleX(1);
-  transition: transform 0.35s linear;
-}
-
-/*
-.sky-container .main-content .text-container .link-container a::after {
-  content: "Link";
-  position: absolute;
-  display: block;
-  width: calc(50% + 6px);
-  height: 0.15em;
-  border: 2px solid black;
-  bottom: -2px;
-  left: calc(25% - 4px);
-  background-color: #000000;
-  transition: transform 0.25s linear;
-}
-*/
-/*
-.sky-container .main-content .text-container .link-container a::after {
-  content: "Test";
-  position: absolute;
-  display: block;
-  width: calc(50% + 6px);
-  height: 0.15em;
-  border: 2px solid black;
-  bottom: -2px;
-  left: calc(25% - 4px);
-  background-color: #000000;
-  transform: scaleX(0);
-  transition: transform 0.2s linear;
-}
-
-.sky-container .main-content .text-container .link-container a:hover::after {
-  transform: scaleX(1);
-}
-*/
-/*
-.sky-container .main-content .text-container .link-container a::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: calc(100% + 6px);
-  height: 0.15em;
-  border: 2px solid black;
-  bottom: -2px;
-  left: -4px;
-  background-color: #289ddb;
-  transform: scaleX(0);
-  transition: transform 0.15s ease;
-}
-
-.sky-container .main-content .text-container .link-container a:hover::after {
-  transform: scaleX(0.25);
-}
-*/
-/*
-.sky-container .main-content .text-container .link-container a::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 0.5em;
-  bottom: 0px;
-  left: 0px;
-  background-color: #007DB9;
-  transform: scaleX(0);
-  transition: transform 0.25s ease;
-}
-
-.sky-container .main-content .text-container .link-container a:hover::before {
-  transform: scaleX(1);
-}
-*/
-/*
-.sky-container .main-content::after {
-  content: '';
-  position: absolute;
-  left: calc(50% - math.div(97%, 2));
-  top: calc(50% - math.div(95%, 2));
-
-  width: 97%;
-  height: 95%;
-  background: transparent;
-  border: 2px solid #d4d4d4;
-}
-*/
 .town-container {
   position: absolute;
   bottom: 0;
@@ -234,109 +130,46 @@ html, body, .vsc-initialized {
 }
 
 .houses-container > img:nth-child(1) {
-  width: 4.4434594893%;
+  width: 62.8046813415px;
+  display: inline;
 }
 
 .houses-container > img:nth-child(2) {
-  width: 4.968046177%;
-  transform: scaleX(-1);
+  width: 69.2281933324px;
+  display: inline;
 }
 
 .houses-container > img:nth-child(3) {
-  width: 4.7686967985%;
+  width: 62.7212022703px;
+  display: inline;
   transform: scaleX(-1);
 }
 
 .houses-container > img:nth-child(4) {
-  width: 5.499861439%;
+  width: 63.4711358525px;
+  display: inline;
 }
 
 .houses-container > img:nth-child(5) {
-  width: 5.4913397404%;
+  width: 67.8767372267px;
+  display: inline;
 }
 
 .houses-container > img:nth-child(6) {
-  width: 4.2639407524%;
+  width: 65.4680228045px;
+  display: inline;
 }
 
 .houses-container > img:nth-child(7) {
-  width: 4.088797304%;
-}
-
-.houses-container > img:nth-child(8) {
-  width: 4.1404073191%;
-}
-
-.houses-container > img:nth-child(9) {
-  width: 5.3974039861%;
+  width: 64.0005730274px;
+  display: inline;
   transform: scaleX(-1);
-}
-
-.houses-container > img:nth-child(10) {
-  width: 4.621028907%;
-}
-
-.houses-container > img:nth-child(11) {
-  width: 4.1614360625%;
-}
-
-.houses-container > img:nth-child(12) {
-  width: 4.3365377696%;
-}
-
-.houses-container > img:nth-child(13) {
-  width: 4.7738105803%;
-}
-
-.houses-container > img:nth-child(14) {
-  width: 4.3795205396%;
-}
-
-.houses-container > img:nth-child(15) {
-  width: 4.0716483007%;
-}
-
-.houses-container > img:nth-child(16) {
-  width: 5.0154270211%;
-  transform: scaleX(-1);
-}
-
-.houses-container > img:nth-child(17) {
-  width: 4.3120294362%;
-  transform: scaleX(-1);
-}
-
-.houses-container > img:nth-child(18) {
-  width: 4.6841856231%;
-}
-
-.houses-container > img:nth-child(19) {
-  width: 4.9711415237%;
-}
-
-.houses-container > img:nth-child(20) {
-  width: 4.5250126675%;
-}
-
-.houses-container > img:nth-child(21) {
-  width: 5.4947356207%;
-}
-
-.houses-container > img:nth-child(22) {
-  width: 5.3623888925%;
-}
-
-.houses-container > img:nth-child(23) {
-  width: 4.9907701842%;
-}
-
-.houses-container > img:nth-child(24) {
-  width: 4.2854622132%;
 }
 
 .houses-container img {
   max-height: 100%;
   padding: 0px;
+  display: hidden;
 }
 
 .wave-container {
@@ -349,63 +182,69 @@ html, body, .vsc-initialized {
 }
 
 @-webkit-keyframes move-wave {
-  from {
+  0% {
     transform: scaleX(1) translateY(0%);
   }
-  to {
+  100% {
     transform: scaleX(1.05) translateY(7%);
   }
 }
 @keyframes move-wave {
-  from {
+  0% {
     transform: scaleX(1) translateY(0%);
   }
-  to {
+  100% {
     transform: scaleX(1.05) translateY(7%);
   }
 }
 @-webkit-keyframes move-boat {
   0% {
-    transform: translateY(0%);
-    right: -8%;
-  }
-  20% {
-    transform: translateY(-25%);
-  }
-  40% {
-    transform: translateY(0%);
-  }
-  60% {
-    transform: translateY(-25%);
-  }
-  80% {
-    transform: translateY(0%);
+    transform: translateX(0);
   }
   100% {
-    transform: translateY(-25%);
-    right: 100%;
+    transform: translateX(-814.2857142857%);
   }
 }
 @keyframes move-boat {
   0% {
-    transform: translateY(0%);
-    right: -8%;
-  }
-  20% {
-    transform: translateY(-25%);
-  }
-  40% {
-    transform: translateY(0%);
-  }
-  60% {
-    transform: translateY(-25%);
-  }
-  80% {
-    transform: translateY(0%);
+    transform: translateX(0);
   }
   100% {
-    transform: translateY(-25%);
-    right: 100%;
+    transform: translateX(-814.2857142857%);
+  }
+}
+@-webkit-keyframes move-boat-vertically {
+  0% {
+    transform: translateY(-15%);
+  }
+  25% {
+    transform: translateY(15%);
+  }
+  50% {
+    transform: translateY(-15%);
+  }
+  75% {
+    transform: translateY(15%);
+  }
+  100% {
+    transform: translateY(-15%);
+  }
+}
+@keyframes move-boat-vertically {
+  0% {
+    transform: translateY(-15%);
+  }
+  25% {
+    transform: translateY(15%);
+  }
+  50% {
+    transform: translateY(-15%);
+  }
+  75% {
+    transform: translateY(15%);
+  }
+  100% {
+    transform: translateY(-15%);
   }
 }
 .wave-container::after {
@@ -418,17 +257,33 @@ html, body, .vsc-initialized {
   border: 0px;
   background: black;
   background-image: url("../images/wave.svg");
+  background-position: top;
+  background-size: 120% 100%;
   background-repeat: repeat-x;
-  -webkit-animation: move-wave 5s alternate ease-in-out infinite;
-  animation: move-wave 5s alternate ease-in-out infinite;
+  -webkit-animation: move-wave 5s alternate cubic-bezier(0.25, 0.56, 0.73, 0.41) infinite;
+  animation: move-wave 5s alternate cubic-bezier(0.25, 0.56, 0.73, 0.41) infinite;
 }
 
 .wave-container .boat {
   position: absolute;
-  top: -10%;
-  right: -8%;
-  width: 8%;
+  height: 82%;
+  width: 100%;
   z-index: 1;
-  -webkit-animation: move-boat 45s linear infinite;
-  animation: move-boat 45s linear infinite;
+  -webkit-animation: move-boat-vertically 20s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
+  animation: move-boat-vertically 20s cubic-bezier(0.29, 0.06, 0.7, 0.93) infinite;
+}
+
+.wave-container .boat::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  top: -10%;
+  right: -14%;
+  width: 14%;
+  z-index: 1;
+  background-image: url("../images/boat.svg");
+  background-position: top;
+  background-size: 100% 100%;
+  -webkit-animation: move-boat 30s linear infinite;
+  animation: move-boat 30s linear infinite;
 }
