--- a/app/scss/newfoundland.scss
+++ b/app/scss/newfoundland.scss
@@ -1,9 +1,9 @@
 @use "sass:math";
 
-
 $bg-color: #d4d4d4;
 $wave-color: #289ddb;
 
+// Universal Stuff
 html, body, .vsc-initialized {
   height: 100%;
   width: 100%;
@@ -18,12 +18,9 @@ html, body, .vsc-initialized {
   top: 0;
   height: 55%;
   width: 100%;
-
 }
 
-// $main-content-width: 49%;
 $main-content-width: 85%;
-// $main-content-height: 84%;
 $main-content-height: 94%;
 
 .sky-container .main-content {
@@ -60,7 +57,6 @@ $main-content-height: 94%;
   height: 65%;
   display: flex;
   flex-direction: column;
-  // justify-content: flex-end;
   justify-content: center;
   align-items: center;
 }
@@ -69,7 +65,6 @@ $main-content-height: 94%;
   text-align: center;
   width: 100%;
 }
-
 
 .sky-container .main-content .text-container .description-container div hr {
   align-content : center;
@@ -152,58 +147,36 @@ $border-box-height: 95%;
 
 // make sure this matches up with the html
 // $max-homes: 25;
-$max-homes-mobile: 10;
-$max-homes-tablet: 14;
-$home-heights-mobile: ();
-$home-heights-tablet: ();
-$home-widths-mobile: ();
-$home-widths-tablet: ();
+$homes-mobile: 8;
+$max-homes: 25;
 
 $precision: 0.01;
 
-@for $i from 1 to $max-homes-mobile {
-  $percentage-per-house: math.div(1, $max-homes-mobile);
-  $home-heights-mobile: append($home-heights-mobile, math.div(85 + random(15), 100));
-  $home-widths-mobile: append($home-widths-mobile, ($percentage-per-house + math.div((math.random() * 1.5), 100)));
-}
+@for $i from 1 to $max-homes {
+  .houses-container>img:nth-child(#{$i}) {
+    // width: #{nth($home-widths, $i) * 100%};
+    // width: #{nth($home-widths, $i) * $max-screen-width};
 
-@for $i from 1 to $max-homes-tablet {
-  $percentage-per-house: math.div(1, $max-homes-tablet);
-  $home-heights-tablet: append($home-heights-tablet, math.div(85 + random(15), 100));
-  $home-widths-tablet: append($home-widths-tablet, ($percentage-per-house + math.div((math.random() * 1.5), 100)));
-}
+    display: inline;
+    height: #{math.div(40 + random(15), 100) * 100%};
 
-@for $i from 1 to $max-homes-mobile {
-  @media (max-device-width: 500px) {
-    .houses-container>img:nth-child(#{$i}) {
-      // width: #{nth($home-widths, $i) * 100%};
-      width: #{nth($home-widths-mobile, $i) * 500px};
-      display: inline;
-
-      // random wether the image is flipped or not
-      @if (random(3) > 2) {
-        transform: scaleX(-1);
-      } 
-    }
+    // random wether the image is flipped or not
+    @if (random(3) > 2) {
+      transform: scaleX(-1);
+    } 
   }
 }
 
-@for $i from 1 to $max-homes-tablet {
-  @media (min-device-width: 500px) and (max-device-width: 768px) {
-    .houses-container>img:nth-child(#{$i}) {
-      // width: #{nth($home-widths, $i) * 100%};
-      width: #{nth($home-widths-tablet, $i) * 768px};
-      display: inline;
-
-      // random wether the image is flipped or not
-      @if (random(3) > 2) {
-        transform: scaleX(-1);
-      } 
-    }
+@for $i from 1 to $homes-mobile {
+  .houses-container>img:nth-child(#{$i}) {
+    display: inline;
   }
 }
+
+
 
 .houses-container img {
+  position: relative;
   max-height: 100%;
   padding: 0px;
   display: hidden;
@@ -236,18 +209,17 @@ $precision: 0.01;
   0% {
     transform: scaleX(1) translateY(0%);    
   } 100% {
-    transform: scaleX(1.05) translateY(7%);
+    transform: scaleX(1.05) translateY(9%);
   }
 }
 
 $boat-width: 14%;
-$boat-animation-altitude: 25%;
-$test: (($boat-width * -1) * (100% / $boat-width)) + (-1 * (100% * (100% / $boat-width)));
+$horizontal-distance: (($boat-width * -1) * (100% / $boat-width)) + (-1 * (100% * (100% / $boat-width)));
 @include keyframes-animation(move-boat) {
   0% {
     transform: translateX(0);    
   } 100%{
-    transform: translateX(#{$test});    
+    transform: translateX(#{$horizontal-distance});    
   }
 }
 
@@ -267,7 +239,7 @@ $test: (($boat-width * -1) * (100% / $boat-width)) + (-1 * (100% * (100% / $boat
 
 $wave-duration: 5s;
 $boat-vertical-duration: $wave-duration * 4;
-$boat-horizontal-duration: 30s;
+$boat-horizontal-duration: 15s;
 
 .wave-container::after {
   content: '';
@@ -308,5 +280,94 @@ $boat-horizontal-duration: 30s;
   background-size: 100% 100%; 
   @include prefix-property(animation, move-boat #{$boat-horizontal-duration} linear infinite);
 }
+
+// 480px < size < 767px
+$homes-mid-mobile: 10;
+
+@media only screen and (min-width: 480px) and (max-width: 767px) { 
+  @for $i from $homes-mobile to $homes-mid-mobile {
+    .houses-container>img:nth-child(#{$i}) {
+      display: inline;
+    }
+  }
+}
+
+$homes-tablet: 13;
+
+@media only screen and (min-width: 768px) and (max-width: 991px){ 
+  @for $i from $homes-mid-mobile to $homes-tablet {
+    .houses-container>img:nth-child(#{$i}) {
+      display: inline;
+    }
+  }
+}
+
+$main-content-width: 49%;
+$main-content-height: 84%;
+
+$boat-width: 7%;
+$horizontal-distance: (($boat-width * -1) * (100% / $boat-width)) + (-1 * (100% * (100% / $boat-width)));
+$boat-horizontal-duration: 30s;
+
+@media only screen and (min-width: 992px) {
+  @for $i from $homes-tablet to $max-homes {
+    .houses-container>img:nth-child(#{$i}) {
+      display: inline;
+    }
+  }
+
+  .sky-container .main-content {
+    left: calc(50% - math.div(#{$main-content-width}, 2));
+    top: calc(50% - math.div(#{$main-content-height}, 2.5));
+    width: #{$main-content-width};
+    height: #{$main-content-height};
+  }
+
+
+  .sky-container .main-content .text-container {
+    font-size: 1.15em;
+  }
+
+  .sky-container .main-content .text-container .description-container {
+    justify-content: flex-end;
+  }
+
+  .sky-container .main-content .text-container .description-container div hr {
+    width: 100%;
+  }
+
+
+  .sky-container .main-content .text-container .link-container span .link-sep {
+    display: none;
+  }
+
+  .sky-container .main-content .extra-break {
+    display: none;
+  }
+
+  .sky-container .main-content .text-container .link-container span .link-sep-non-mobile {
+    display: inline;
+  }
+
+  .wave-container::after {
+    background-size: 100% 100%;
+  }
+  @include keyframes-animation(move-boat) {
+    0% {
+      transform: translateX(0);    
+    } 100%{
+      transform: translateX(#{$horizontal-distance});    
+    }
+  } 
+
+  .wave-container .boat::after {
+    right: -#{$boat-width};
+    width: #{$boat-width};
+    z-index: 1;
+
+    @include prefix-property(animation, move-boat #{$boat-horizontal-duration} linear infinite);
+  }
+}
+
 
 
